# Logger

./: .gitignore  CMakeLists.txt  LoggerJSONConfigNames.h.in  README.md  build.py
.github/workflows/: ci.yml  linux.yml  macos.yml  static-analysis.yml  windows.yml
Example/: main.cpp
Tests/: CMakeLists.txt  test_Formatter.cpp  test_Helper.cpp  test_LoggerConfig.cpp  test_LoggerWrapper.cpp
cmake/: CppCheck.cmake  LoggerConfig.cmake.in  cpm.cmake
include/: Formatter.h  Helper.h  Logger.h  LoggerConfig.h  LoggerImpl.h  LoggerManager.h  LoggerRegistry.h  LoggerWrapper.h  PrintMacros.h
include/Logger/: Formatter.h  Helper.h  LoggerWrapper.h  PrintMacros.h
scripts/: argument_parser.py  build_runner.py  enums.py  paths.py  versioning.py
src/: Formatter.cpp  LoggerImpl.cpp  LoggerWrapper.cpp  LoggerWrapper.h  PrintMacros.cpp
src/Example/: main.cpp
src/LoggerWrapper/: LoggerWrapper.cpp  LoggerWrapper.h
